03-k8s-deploy/03-03-ingress/exercise/ingress-v1-domain.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: rotc.mdjnewman.me
    http:
      paths:
      - backend:
          serviceName: dockercoins
          servicePort: 80
        path: /(.*)
